<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Your content: make it scroll-aware -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fitsSystemWindows="true"
        />

    <!-- Bottom nav: hide on scroll -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/menu_bottom_nav"
        android:background="@color/white"
        app:itemIconTint="@color/nav_item_color"
        app:itemTextColor="@color/nav_item_color"
        app:itemRippleColor="@android:color/transparent"
        app:itemActiveIndicatorStyle="@android:color/transparent"
        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
